Use required/wp-requirements-check as a library

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,15 @@
             "role": "Developer"
         }
     ],
-    "require": {},
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/wearerequired/wp-requirements-check"
+        }
+    ],
+    "require": {
+      "required/wp-requirements-check": "dev-master"
+    },
     "require-dev": {
         "phpmd/phpmd": "@stable"
     },
