--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "psr-4": {
-            "wearerequired\\Custom_Menu_Item_Types\\": ["classes/", "lib/"]
+            "required\\Custom_Menu_Item_Types\\": ["classes/"]
         }
     }
 }
