--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,8 @@
             "role": "Developer"
         }
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/wearerequired/wp-requirements-check"
-        }
-    ],
     "require": {
-      "wearerequired/wp-requirements-check": "dev-master"
+        "wearerequired/wp-requirements-check": "^1.0"
     },
     "require-dev": {
         "phpmd/phpmd": "@stable"
